# wiki-extractor

./: .gitignore  Cargo.toml  README.md  Samples.md  rustfmt.toml  test.sh
.github/workflows/: build.yml
src/: dump_data.rs  format.rs  main.rs  state.rs  xml_util.rs
src/input/: data.rs  io.rs
src/output/: generator.rs  mediawiki.rs  mod.rs  options.rs  processing.rs
