[package]
name = "wiki-extractor"
version = "0.1.5"
edition = "2021"
description = "Wikipedia dump download and cleanup tool"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
license = "GPLv3"
license-file = "LICENSE"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
# tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
# async-trait = "0.1"

url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
bytes = "1.6"
bzip2 = { version = "0.4", features = ["tokio"] }
quick-xml = "0.32"
human-sort = "0.2.2"

log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.7", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
termsize = "0.1.6"

sha1 = "0.10"
chrono = {version = "0.4", features = ["serde"]}
parse-wiki-text-2 = "0.2.0"
# regex = "1.10"
aho-corasick = "1.1.3"
itertools = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
